# aoc

./: .gitignore  CMakeLists.txt  todo.txt  vcpkg.json
2015/: CMakeLists.txt  main.cpp  utils.h
2015/cpp/: CMakeLists.txt  aoc.cpp  aoc.h  aoc_day.h  d1.cpp  d1.h  d10.cpp  d10.h  d11.cpp  d11.h  d12.cpp  d12.h  d13.cpp  d13.h  d14.cpp  d14.h  d15.cpp  d15.h  d16.cpp  d16.h  d17.cpp  d17.h  d18.cpp  d18.h  d19.cpp  d19.h  d2.cpp  d2.h  d20.cpp  d20.h  d21.cpp  d21.h  d22.cpp  d22.h  d23.cpp  d23.h  d24.cpp  d24.h  d25.cpp  d25.h  (+17 more)
2015/cpp/d1/: CMakeLists.txt  main.c
2015/cpp/d2/: main.cpp
2015/d2/: CMakeLists.txt
2015/python/: day1.py  day2.py  main.py
2025/cpp/: CMakeLists.txt  aoc.cpp  d1.cpp  d1.h  d10.cpp  d10.h  d11.cpp  d11.h  d12.cpp  d12.h  d2.cpp  d2.h  d3.cpp  d3.h  d4.cpp  d4.h  d5.cpp  d5.h  d6.cpp  d6.h  d7.cpp  d7.h  d8.cpp  d8.h  d9.cpp  d9.h  data_dir.h.in  main.cpp  pch.h  utils.h
